<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MeActivity">

    <include layout="@layout/nav_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSize"
        android:gravity="center_horizontal"
        android:text="@string/user_name"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:layout_marginTop="@dimen/marginSize"
        android:background="@drawable/item_commit_selector"
        android:gravity="center_vertical"
        android:onClick="onChangeClick"
        android:paddingLeft="@dimen/marginSize"
        android:text="@string/change_password" />

    <Button
        style="@style/commitBtn"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onLogoutClick"
        android:text="@string/logout" />
</LinearLayout>