<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <include layout="@layout/nav_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:contentDescription="@null"
        android:src="@mipmap/logo" />

    <com.panj.imoocmusic.view.InputView
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        android:layout_marginTop="@dimen/marginSize"
        app:input_hint="@string/input_old_password"
        app:input_icon="@mipmap/password"
        app:is_password="true" />

    <View style="@style/line" />

    <com.panj.imoocmusic.view.InputView
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        app:input_hint="@string/input_new_password"
        app:input_icon="@mipmap/password"
        app:is_password="true" />

    <View style="@style/line" />

    <com.panj.imoocmusic.view.InputView
        android:id="@+id/input_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        app:input_hint="@string/confirm_new_password"
        app:input_icon="@mipmap/password"
        app:is_password="true" />

    <View style="@style/line" />

    <Button
        style="@style/commitBtn"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onCommitClick"
        android:text="@string/confirm" />
</LinearLayout>